--- a/app/src/main/res/layout/activity_tech_detail.xml
+++ b/app/src/main/res/layout/activity_tech_detail.xml
@@ -33,11 +33,44 @@
             android:layout_marginTop="5dp"
             tools:text="shift price" />
 
-        <TextView
-            android:id="@+id/tech_count"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tech_shift"
+            android:orientation="horizontal"
+            >
+
+                <TextView
+                    android:id="@+id/tech_count"
+                    android:layout_width="match_parent"
+                    android:layout_weight="4.0"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tech_shift"
+                    android:layout_marginTop="5dp"
+                    tools:text="count" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:text="+"
+                    />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:text="-"
+                    />
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Добавить"
+            android:textAllCaps="false"
             android:layout_marginTop="5dp"
-            tools:text="count" />
+
+            />
+
 </LinearLayout>
